--- a/hiragana_classify/notebook/hiragana.ipynb
+++ b/hiragana_classify/notebook/hiragana.ipynb
@@ -430,7 +430,7 @@
     "model.add(layers.Flatten())\n",
     "model.add(layers.Dense(512, activation='relu'))\n",
     "model.add(layers.Dropout(0.2))\n",
-    "model.add(layers.Dense(73, activation='softmax'))\n",
+    "model.add(layers.Dense(73, activation='softmax'))\n"
    ]
   },
   {
