Use original data

--- a/hiragana_classify/notebook/hiragana.ipynb
+++ b/hiragana_classify/notebook/hiragana.ipynb
@@ -637,7 +637,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "ind = 500\n",
-    "im_list = np.asarray(X_test[ind])\n",
+    "im_list = np.asarray(X_test_orig[ind])\n",
     "plt.imshow(im_list)\n",
     "plt.show()"
    ]
