--- a/dog_breed_classification/notebook/Dog_breed_classification.ipynb
+++ b/dog_breed_classification/notebook/Dog_breed_classification.ipynb
@@ -101,7 +101,7 @@
     "    dataset_list_img_label.append([img, item.attributes['classification'][0]['label_id']])\n",
     "\n",
     "# print number of images in dataset\n",
-    "print('There are %d total dog images.' % len(dataset_list_img_label))"
+    "print('There are %d total images.' % len(dataset_list_img_label))"
    ]
   },
   {
@@ -585,6 +585,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.6"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
