--- a/dog_breed_classification/notebook/Create_ABEJA_Platform_dataset.ipynb
+++ b/dog_breed_classification/notebook/Create_ABEJA_Platform_dataset.ipynb
@@ -4,45 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create ABEJA Platform dataset\n",
-    "\n",
-    "Tutorial for creating ABEJA Platform dataset from online data source  \n",
-    "Sample code uses Stanford Dogs Dataset: http://vision.stanford.edu/aditya86/ImageNetDogs/"
+    "## Create ABEJA Platform dataset"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step1: Download data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# save data in /home/data\n",
-    "!wget http://vision.stanford.edu/aditya86/ImageNetDogs/images.tar -P /home/data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# extract tar file\n",
-    "n_files = !tar tf /home/data/images.tar | grep .jpg | wc -l\n",
-    "!tar xvf /home/data/images.tar -C /home/data/ | pv -l -s {n_files[0]} > /dev/null"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Step 2: Load data"
+    "### Step 1: Load data"
    ]
   },
   {
@@ -54,12 +23,11 @@
     "from glob import glob\n",
     "\n",
     "# load filenames for images\n",
-    "test_files = list(glob('/home/data/Images/*/*'))\n",
-    "test_dir = list(glob('/home/data/Images/*'))\n",
+    "file_names = list(glob('./*/*'))\n",
+    "dir_names = list(glob('./*'))\n",
     "\n",
     "# print number of images in dataset\n",
-    "print('There are %d total images.' % len(test_files))\n",
-    "test_dir"
+    "print('There are %d total images.' % len(file_names))"
    ]
   },
   {
@@ -68,44 +36,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load filenames for selected images\n",
-    "selected = ['French_bulldog', 'Chihuahua','bull_mastiff',\n",
-    "          'Labrador_retriever', 'Boston_bull']\n",
-    "\n",
-    "selected_files = []\n",
-    "\n",
-    "for file in test_files:\n",
-    "    for item in selected:\n",
-    "        if item in file:\n",
-    "            selected_files.append(file)\n",
-    "\n",
-    "# print number of images in dataset\n",
-    "print('There are %d selected images.' % len(selected_files))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# show one of images\n",
-    "import matplotlib.pyplot as plt                        \n",
-    "%matplotlib inline         \n",
-    "from PIL import Image, ImageFile \n",
-    "\n",
-    "image = Image.open(selected_files[0])\n",
-    "plt.imshow(image)\n",
-    "plt.show()"
+    "# select directories\n",
+    "selected_dirnames = [d for d in dir_names if 'bull' in d]\n",
+    "print(selected_dirnames)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 3: Create Datalake channel"
+    "### Step 2: Upload data to Datalake channel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set credential\n",
+    "credential = {\n",
+    "    'user_id': 'user-XXXXXXXXXXXXX',\n",
+    "    'personal_access_token': 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX'\n",
+    "}\n",
+    "\n",
+    "organization_id='XXXXXXXXXXXXX'"
    ]
   },
   {
@@ -115,37 +70,22 @@
    "outputs": [],
    "source": [
     "from abeja.datalake import Client as DatalakeClient\n",
-    "from abeja.datalake.storage_type import StorageType\n",
     "\n",
-    "datalake_client = DatalakeClient()\n",
+    "# set datalake channel_id\n",
+    "channel_id = 'XXXXXXXXXXXXX'\n",
     "\n",
-    "# define your own name and description\n",
-    "name = 'XXXXX'\n",
-    "description = 'XXXXX'\n",
+    "datalake_client = DatalakeClient(organization_id, credential)\n",
+    "channel = datalake_client.get_channel(channel_id)\n",
     "\n",
-    "channel = datalake_client.channels.create(name, description, StorageType.DATALAKE.value)\n",
-    "channel_id = channel.channel_id\n",
-    "    \n",
-    "print('channel_id is %s.' % channel_id)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import os\n",
     "from tqdm import tqdm\n",
     "\n",
-    "# upload home directory data to datalake\n",
-    "for file in tqdm(selected_files):\n",
-    "    dir_name = os.path.basename(os.path.dirname(file))\n",
-    "    dir_name = os.path.basename(dir_name) # get directory name for labeling\n",
-    "    dir_name = dir_name.upper() # conver to uppercase \n",
-    "    label_name = dir_name[10:] # remove numbers\n",
+    "# upload directory data to datalake\n",
+    "for d in tqdm(selected_dirnames):\n",
+    "    # convert to uppercase and remove numbers\n",
+    "    label_name = os.path.basename(d).upper()[10:]\n",
     "    metadata = {'label': label_name}\n",
-    "    file = channel.upload_file(file, metadata=metadata)"
+    "    channel.upload_dir(d, metadata=metadata)"
    ]
   },
   {
@@ -161,46 +101,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "categories = sorted([item.upper() for item in selected])\n",
-    "    \n",
-    "print('No. of categories is %d.' % len(categories))\n",
-    "categories"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create dataset label from category names\n",
-    "labels = []\n",
+    "import json\n",
+    "\n",
+    "labels = sorted([os.path.basename(d).upper()[10:] for d in selected_dirnames])\n",
+    "labels_and_id = []\n",
     "label_to_id = {}\n",
     "\n",
-    "for i, name in enumerate(categories):\n",
+    "for i, name in enumerate(labels):\n",
     "    label_to_id[name] = i\n",
-    "    labels.append({'label_id': i,\n",
+    "    labels_and_id.append({'label_id': i,\n",
     "                   'label': name})\n",
-    "labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# define dataset name\n",
-    "dataset_name = 'XXXXX'\n",
+    "    \n",
+    "# define category name\n",
+    "category_name = 'bull-classificaiton'\n",
     "\n",
     "# create dataset label\n",
     "category = {\n",
     "    'category_id': 0,\n",
-    "    'name': dataset_name,\n",
-    "    'labels': labels}\n",
+    "    'name': category_name,\n",
+    "    'labels': labels_and_id}\n",
     "\n",
     "props = {'categories': [category]}\n",
-    "props"
+    "json.dumps(props)"
    ]
   },
   {
@@ -216,36 +138,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create dataset by importing datalake files\n",
     "from abeja.datasets import Client as DatasetClient\n",
     "\n",
-    "dataset_client = DatasetClient()\n",
+    "dataset_client = DatasetClient(organization_id, credential)\n",
     "\n",
-    "# create dataset\n",
-    "dataset = dataset_client.datasets.create(name=dataset_name, type='classification', props=props)\n",
-    "dataset_id = dataset.dataset_id\n",
+    "# define dataset id\n",
+    "dataset_id = 'XXXXXXXXXXXXX'\n",
     "\n",
-    "print('dataset_id is %s.' % dataset_id)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# delete dataset\n",
-    "#dataset_client.datasets.delete(dataset_id)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create dataset by importing datlake data\n",
+    "dataset = dataset_client.get_dataset(dataset_id)\n",
     "\n",
     "for f in tqdm(channel.list_files()):\n",
     "    data_uri = f.uri\n",
@@ -267,6 +168,13 @@
     "\n",
     "    dataset.dataset_items.create(source_data, attributes)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -285,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
