--- a/bulldog_classification/notebook/Bulldog_classification.ipynb
+++ b/bulldog_classification/notebook/Bulldog_classification.ipynb
@@ -61,7 +61,7 @@
     "    'personal_access_token': 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX'\n",
     "}\n",
     "\n",
-    "organization_id='XXXXXXXXXXXXX'"
+    "organization_id = 'XXXXXXXXXXXXX"
    ]
   },
   {
@@ -86,7 +86,7 @@
     "dataset_id = 'XXXXXXXXXXXXX'\n",
     "\n",
     "# get dataset via ABEJA Platform api\n",
-    "dataset_client = DatasetClient()\n",
+    "dataset_client = DatasetClient(credential=credential, organization_id=organization_id)\n",
     "dataset = dataset_client.get_dataset(dataset_id)\n",
     "dataset_list = list(load_dataset_from_api(dataset))\n",
     "num_classes = len(dataset.props['categories'][0]['labels'])\n",
@@ -125,11 +125,11 @@
     "# define customized dataset class\n",
     "class CustomizedDataset(Dataset):\n",
     "\n",
-    "    def __init__(self, dataset, transform=None):\n",
+    "    def __init__(self, dataset_list, transform=None):\n",
     "        self.transform = transform\n",
-    "        self.dataset = dataset\n",
-    "        self.img = [item[0] for item in self.dataset]\n",
-    "        self.label_id = [item[1] for item in self.dataset]\n",
+    "        self.dataset_list = dataset_list\n",
+    "        self.img = [item[0] for item in self.dataset_list]\n",
+    "        self.label_id = [item[1] for item in self.dataset_list]\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.img)\n",
@@ -222,7 +222,7 @@
     "n_epochs = 10\n",
     "learning_rate = 0.001\n",
     "\n",
-    "# set save pa\n",
+    "# set save path\n",
     "save_path = './model.pt'\n",
     "\n",
     "# specify model architecture (ResNet-50)\n",
@@ -255,7 +255,7 @@
     "    if os.path.exists(save_path):\n",
     "        model.load_state_dict(torch.load(save_path))\n",
     "\n",
-    "    for epoch in range(1, n_epochs + 1):\n",
+    "    for epoch in range(n_epochs):\n",
     "        # initialize variables to monitor training and validation loss and accuracy\n",
     "        train_loss = 0.0\n",
     "        train_total = 0\n",
@@ -303,39 +303,30 @@
     "            valid_correct += (preds_tensor == target).sum().item()\n",
     "\n",
     "        # calculate average losses\n",
-    "        train_loss = train_loss / len(trainloader.dataset)\n",
-    "        valid_loss = valid_loss / len(validloader.dataset)\n",
+    "        train_loss /= len(trainloader.dataset)\n",
+    "        valid_loss /= len(validloader.dataset)\n",
     "        # calculate accuracy\n",
     "        train_acc = train_correct / train_total\n",
     "        valid_acc = valid_correct / valid_total\n",
     "\n",
     "        # print training/validation statistics\n",
-    "        print(\n",
-    "            'Epoch: {} \\tTrain loss: {:.6f} \\tTrain acc: {:.6f} \\tValid loss: {:.6f} \\tValid acc: {:.6f}'.format(\n",
-    "                epoch,\n",
+    "        print('Epoch: {} \\tTrain loss: {:.6f} \\tTrain acc: {:.6f} \\tValid loss: {:.6f} \\tValid acc: {:.6f}'.format(\n",
+    "                epoch + 1,\n",
     "                train_loss,\n",
     "                train_acc,\n",
     "                valid_loss,\n",
-    "                valid_acc\n",
-    "            ))\n",
+    "                valid_acc))\n",
     "\n",
     "        # save model if validation loss has decreased\n",
     "        if valid_loss <= valid_loss_min:\n",
-    "            print('Validation loss decreased ({:.6f} --> {:.6f}).  Saving model.'.format(\n",
+    "            print('Validation loss decreased ({:.6f} --> {:.6f}). Saving model.'.format(\n",
     "                valid_loss_min,\n",
     "                valid_loss))\n",
     "            torch.save(model.state_dict(), save_path)\n",
     "            valid_loss_min = valid_loss\n",
     "    # return trained model\n",
-    "    return model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return model\n",
+    "\n",
     "# train the model\n",
     "train_model(trainloader, validloader, model, optimizer, criterion)"
    ]
@@ -463,7 +454,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
