--- a/bording/01_collect_data/01-collect-data.ipynb
+++ b/bording/01_collect_data/01-collect-data.ipynb
@@ -23,8 +23,8 @@
     "from glob import glob\n",
     "\n",
     "# load filenames for images\n",
-    "file_names = list(glob('./Images/*/*'))\n",
-    "dir_names = list(glob('./Images/*'))\n",
+    "file_names = list(glob('./flowers/*/*'))\n",
+    "dir_names = list(glob('./flowers/*'))\n",
     "\n",
     "# print number of images in dataset\n",
     "print('There are %d total images.' % len(file_names))"
@@ -83,7 +83,7 @@
     "# upload directory data to datalake\n",
     "for d in tqdm(selected_dirnames):\n",
     "    # convert to uppercase and remove numbers\n",
-    "    label_name = os.path.basename(d).upper()[10:]\n",
+    "    label_name = os.path.basename(d)\n",
     "    metadata = {'label': label_name}\n",
     "    channel.upload_dir(d, metadata=metadata)"
    ]
@@ -103,7 +103,7 @@
    "source": [
     "import json\n",
     "\n",
-    "labels = sorted([os.path.basename(d).upper()[10:] for d in selected_dirnames])\n",
+    "labels = sorted([os.path.basename(d) for d in selected_dirnames])\n",
     "labels_and_id = []\n",
     "label_to_id = {}\n",
     "\n",
@@ -113,7 +113,7 @@
     "                   'label': name})\n",
     "    \n",
     "# define category name\n",
-    "category_name = 'bull-classificaiton'\n",
+    "category_name = 'flower-classificaiton'\n",
     "\n",
     "# create dataset label\n",
     "category = {\n",
