--- a/bording/01_collect_data/01-collect-data.ipynb
+++ b/bording/01_collect_data/01-collect-data.ipynb
@@ -15,6 +15,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Data Download"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "\n",
+    "def download_file_from_google_drive(id, destination):\n",
+    "    URL = \"https://docs.google.com/uc?export=download\"\n",
+    "\n",
+    "    session = requests.Session()\n",
+    "\n",
+    "    response = session.get(URL, params = { 'id' : id }, stream = True)\n",
+    "    token = get_confirm_token(response)\n",
+    "\n",
+    "    if token:\n",
+    "        params = { 'id' : id, 'confirm' : token }\n",
+    "        response = session.get(URL, params = params, stream = True)\n",
+    "\n",
+    "    save_response_content(response, destination)    \n",
+    "\n",
+    "def get_confirm_token(response):\n",
+    "    for key, value in response.cookies.items():\n",
+    "        if key.startswith('download_warning'):\n",
+    "            return value\n",
+    "\n",
+    "    return None\n",
+    "\n",
+    "def save_response_content(response, destination):\n",
+    "    CHUNK_SIZE = 32768\n",
+    "\n",
+    "    with open(destination, \"wb\") as f:\n",
+    "        for chunk in response.iter_content(CHUNK_SIZE):\n",
+    "            if chunk: # filter out keep-alive new chunks\n",
+    "                f.write(chunk)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_id = '1w6Fn_ZjLlPzAswSRFj6uuusYod87apHJ'\n",
+    "destination = './flowers-recognition.zip'\n",
+    "download_file_from_google_drive(file_id, destination)\n",
+    "print('Download OK')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### unzip / Check Download data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# unzip download data\n",
+    "n_files = !unzip -l ./flowers-recognition.zip | grep .jpg | wc -l\n",
+    "!unzip -o ./flowers-recognition.zip | pv -l -s {n_files[0]} > /dev/null"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -185,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
