Modify Boarding File

--- a/bording/01_collect_data/01-collect-data.ipynb
+++ b/bording/01_collect_data/01-collect-data.ipynb
@@ -4,14 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 01-collect-data"
+    "## データセット作成\n",
+    "このNotebookでは、Kaggleで公開されている花の画像を利用し、\n",
+    "ABEJA PlatformでImage Classificationを利用するためのデータセットを作成します。"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 1: Load data"
+    "### Step 1: Load data\n",
+    "データセットを作成するためのデータをダウンロードします。\n",
+    "このステップではKaggleで提供されている花のデータセットをダウンロードして利用します。"
    ]
   },
   {
@@ -75,7 +79,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### unzip / Check Download data"
+    "#### ダウンロードした画像データを解凍・ファイルチェック\n",
+    "ダウンロードしたデータをunzipし、ファイル数、フォルダ名をチェックします。"
    ]
   },
   {
@@ -120,7 +125,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 2: Upload data to Datalake channel"
+    "### Step 2: DataLakeにデータをアップロードします。\n",
+    "このステップでは、ダウンロードしたデータにメタデータ(Label)を付与してDataLakeにアップロードします。\n",
+    "※事前にDataLakeチャンネルの作成が必要です。"
    ]
   },
   {
@@ -167,7 +174,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 4: Create dataset label"
+    "### Step 3: データレイクに保存したファイルのメタデータ(Label)を利用してJSONを出力\n",
+    "データセット作成に必要な「プロパティ」に入力するJSONをメタデータを利用して出力します。\n",
+    "※出力されたJSONの最初と最後のカンマ以外をコピーして利用ください。"
    ]
   },
   {
@@ -204,7 +213,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 5: Create Dataset from Datalake channel"
+    "### Step 4: Datalakeに保存したファイルからデータセットを作成します。\n"
+    "このステップでは、DataLakeに保存したファイルを利用してデータセットを作成します。\n",
+    "※ラベルについては、メタデータ(Label)で設定されている情報を利用します。"
    ]
   },
   {
