--- a/bording/01_collect_data/01-collect-data.ipynb
+++ b/bording/01_collect_data/01-collect-data.ipynb
@@ -213,7 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 4: Datalakeに保存したファイルからデータセットを作成します。\n"
+    "### Step 4: Datalakeに保存したファイルからデータセットを作成します。\n",
     "このステップでは、DataLakeに保存したファイルを利用してデータセットを作成します。\n",
     "※ラベルについては、メタデータ(Label)で設定されている情報を利用します。"
    ]
