Modify Sample Notebook

--- a/Notebook/Sample.ipynb
+++ b/Notebook/Sample.ipynb
@@ -157,7 +157,7 @@
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
     "])\n",
-    "trainset = FlowerDataset(root='data/buckets/2029815556111/', transform=transform)\n",
+    "trainset = FlowerDataset(root='/mnt/notebooks/{notebook_id}/data/buckets/{bucket_id}/', transform=transform)\n",
     "trainloader = torch.utils.data.DataLoader(trainset, batch_size=32,\n",
     "                                          shuffle=True, num_workers=2)"
    ]
