--- a/Notebook/blur/blur_image.ipynb
+++ b/Notebook/blur/blur_image.ipynb
@@ -30,7 +30,7 @@
     "                    data=data,\n",
     "                    headers=headers,\n",
     "                    auth=auth)\n",
-    "ret = json.loads(res.content.decode())\n",
+    "ret = json.loads(res.content.decode('utf-8'))\n",
     "print(ret)"
    ]
   },
@@ -93,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
